cmake_minimum_required(VERSION 2.8)

project ( GraalAssetClient CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(GraalAssetClient ${SRC})
target_link_libraries(GraalAssetClient Qt5::Core)
target_link_libraries(GraalAssetClient Qt5::Gui)
target_link_libraries(GraalAssetClient Utility)
target_link_libraries(GraalAssetClient Networking)
target_link_libraries(GraalAssetClient TcpNetworking)
target_link_libraries(GraalAssetClient AssetInterfaces)
target_link_libraries(GraalAssetClient AssetGenerics)
target_link_libraries(GraalAssetClient Assets)
target_link_libraries(GraalAssetClient Wavefront)
target_link_libraries(GraalAssetClient QImageLoader)
