cmake_minimum_required(VERSION 2.8)

project ( GraalAssetServer CXX )
file ( GLOB_RECURSE SRC *.?pp )
add_executable(GraalAssetServer ${SRC})
target_link_libraries(GraalAssetServer Qt5::Core)
target_link_libraries(GraalAssetServer Qt5::Gui)
target_link_libraries(GraalAssetServer Utility)
target_link_libraries(GraalAssetServer Networking)
target_link_libraries(GraalAssetServer TcpNetworking)
target_link_libraries(GraalAssetServer AssetInterfaces)
target_link_libraries(GraalAssetServer AssetGenerics)
target_link_libraries(GraalAssetServer Assets)
target_link_libraries(GraalAssetServer Wavefront)
target_link_libraries(GraalAssetServer QImageLoader)
